# better-web

./: .envrc  .gitignore  .mcp.json  .resume  LICENSE  Makefile  README.md  config.toml  config.yaml  flake.nix  lists.toml  pyproject.toml
.github/workflows/: test.yml
data/: ad_trackers.txt  ai_phrases.txt  custom_blocked.txt  discussion_markers.txt  high_quality_tlds.txt  low_quality_tlds.txt  page_types.yaml  seo_keywords.txt  skip_extensions.txt  url_rewrites.yaml
lib/: ai_detect.py  cli.py  config.py  dedup.py  digest.py  domain_filter.py  domain_scoring.py  filter.py  health.py  html_scoring.py  llm.py  llm_analyzer.py  logging.py  mcp_server.py  output.py  quality.py  relevance.py  relevance_scorer.py  render.py  scrape.py  search.py  settings.py  shingling.py  text_scoring.py  youtube.py
tests/: conftest.py  test_cli.py  test_domain_filter.py  test_health.py  test_mcp_server.py  test_scrape.py  test_settings.py  test_text_scoring.py
tests/cassettes/: cli_search_batch.yaml
tests/fixtures/: search_batch_pages.json
